# chokkin

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.ja.md  README.md  SECURITY.md  chokkin-baseline.json  clippy.toml  deny.toml  pyproject.toml  rustfmt.toml
.cargo/: audit.toml
.claude/: settings.json
.claude/hooks/: stop-wrapup.sh
.claude/skills/grill-me/: SKILL.md
.claude/skills/update-design/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.claude/skills/update-plan/: SKILL.md
.claude/skills/wrapup/: SKILL.md
.cursor/: environment.json  hooks.json  ptuf-hook.sh
.github/: actionlint.yaml  copilot-instructions.md  dependabot.yml  zizmor.yml
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: cache.rs  manifest.rs  sources.rs
benches/support/: mod.rs
data/: binary-map.seed.json  package-map.seed.json
docs/adr/: 0001-parser-selection.md  0002-plugin-api-rfc.md
docs/dev/: ci-porting-notes.md  oss-validation-report.md  schema-migration-notes.md  spec.ja.md  v0.2-release-validation.md  v0.3-release-validation.md
docs/dev/plans/: README.md  VALIDATION.md  phase-0-cli-vertical-slice.md  phase-0-parser-spike-graph-core.md  phase-1-cli-reporter.md  phase-1.5-fp-remediation.md  phase-2-v0.2-adoption.md  phase-3x-v0.4-reliability-contract.md  phase-4-v0.4-reliability-contract.md  step-01-root-discovery.md  step-02-config-load.md  step-03-manifest-extraction.md  step-04-source-file-discovery.md  step-05-config-plugin-extraction.md  step-06-python-parse.md  step-07-import-resolution.md  step-08-entry-root-construction.md  step-09-reachability-analysis.md  step-10-dependency-reconciliation.md  step-11-symbol-usage-analysis.md  step-12-issue-emission.md  step-13-optional-fix.md
docs/schema/: chokkin-baseline.schema.json  chokkin-report.schema.json
proptest-regressions/manifest/: pep508_util.txt
proptest-regressions/sources/: context.txt
scripts/: bootstrap-agent.sh  clone-oss-fixtures.sh  generate-package-map.py  generate-stdlib-modules.py  oss-clones.manifest  oss-fixtures.labels.tsv  oss-fixtures.manifest  oss-metrics.sh  oss-recall.manifest  run-oss-fixture.sh
src/: cache.rs  cli.rs  init.rs  lib.rs  main.rs
src/baseline/: mod.rs  store.rs  types.rs
src/config/: defaults.rs  error.rs  load.rs  mod.rs  parse.rs  source.rs  types.rs  workspace.rs
src/discovery/: error.rs  mod.rs  root.rs
src/entry/: apply.rs  auto.rs  build.rs  error.rs  merge.rs  mod.rs  mode.rs  module.rs  types.rs
src/fix/: apply.rs  containment.rs  error.rs  mod.rs  plan.rs  pyproject.rs  requirements.rs  setup_cfg.rs  types.rs  write.rs
src/graph/: build.rs  edges.rs  error.rs  mod.rs  types.rs
src/manifest/: error.rs  extract.rs  literals.rs  mod.rs  pep508_util.rs  pyproject.rs  requirements.rs  setup_cfg.rs  setup_py.rs  types.rs  util.rs  uv_lock.rs  warnings.rs
src/parser/: attributes.rs  decorators.rs  dynamic.rs  error.rs  exports.rs  ignores.rs  mod.rs  parse.rs  platform_guard.rs  relative.rs  syntax.rs  type_checking.rs  types.rs  visit.rs
src/pipeline/: analyze.rs  error.rs  mod.rs  probe.rs  trace.rs  warnings.rs
src/plugins/: celery.rs  config_scan.rs  context.rs  devtools.rs  django.rs  doctools.rs  error.rs  extract.rs  fastapi.rs  flask.rs  mod.rs  pytest.rs  stub.rs  types.rs  util.rs  warnings.rs
src/reachability/: bfs.rs  build.rs  error.rs  mod.rs  module_index.rs  trace.rs  types.rs
src/reporters/: compact.rs  default.rs  format.rs  github.rs  json.rs  markdown.rs  mod.rs  sarif.rs  traits.rs  types.rs
src/resolver/: apply.rs  error.rs  first_party.rs  maps.rs  metadata.rs  mod.rs  resolve.rs  stdlib.rs  transitive.rs  types.rs  venv.rs
src/resolver/bundled/: binaries.rs  mod.rs  package_modules.rs
src/resolver/stdlib/: py310.txt  py311.txt  py312.txt  py313.txt
src/rules/: chk001.rs  emit.rs  filter.rs  ignore.rs  metadata.rs  mod.rs  severity.rs  types.rs  yok001.rs
src/rules/symbols/: analyze.rs  exports.rs  external.rs  graph.rs  mod.rs  types.rs
src/schema/: mod.rs
src/sources/: context.rs  discover.rs  error.rs  glob.rs  layout.rs  mod.rs  types.rs  walk.rs  warnings.rs
tests/: cli_analyze.rs  cli_probe.rs  config_load.rs  deps_reconcile.rs  discovery_root.rs  entry_build.rs  fix_apply.rs  fuzz_corpus.rs  graph_build.rs  ignore_syntax.rs  issues_emit.rs  manifest_extract.rs  parser_parse.rs  pipeline_phase0_spike.rs  plugins_extract.rs  prop_config.rs  prop_manifest.proptest-regressions  prop_manifest.rs  prop_sources.rs  reachability_analyze.rs  reporters_render.rs  resolver_resolve.rs  schema_contract.rs  sources_discover.rs  symbols_analyze.rs
tests/fixtures/config/backslash_entry/: pyproject.toml
tests/fixtures/config/broken_toml/: pyproject.toml
tests/fixtures/config/chokkin_toml_only/: chokkin.toml
tests/fixtures/config/defaults_only/: pyproject.toml
tests/fixtures/config/dot_yokei_only/: .yokei.toml
tests/fixtures/config/empty_workspace_path/: pyproject.toml
tests/fixtures/config/entry_empty_symbol/: pyproject.toml
tests/fixtures/config/incomplete_dependencies/: pyproject.toml
tests/fixtures/config/invalid_confidence/: pyproject.toml
tests/fixtures/config/invalid_entry/: pyproject.toml
tests/fixtures/config/invalid_exclude_path/: pyproject.toml
tests/fixtures/config/invalid_ignore/: pyproject.toml
tests/fixtures/config/invalid_mode/: pyproject.toml
tests/fixtures/config/invalid_plugin_type/: pyproject.toml
tests/fixtures/config/invalid_project_path/: pyproject.toml
tests/fixtures/config/invalid_target_version/: pyproject.toml
tests/fixtures/config/invalid_uv_workspace_members/: pyproject.toml
tests/fixtures/config/merge_priority/: .chokkin.toml  pyproject.toml  yokei.toml
tests/fixtures/config/partial_plugins/: pyproject.toml
tests/fixtures/config/pyproject_full/: pyproject.toml
tests/fixtures/manifest/pyproject_full/: pyproject.toml
tests/fixtures/parser_spike/: p2_basic_imports.py  p4_type_checking.py  p5_try_import.py  p6_fstring.py  p7_match.py  p8_ignore_comment.py  p9_syntax_error.py
(+146 files in other folders)
