[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "chokkin"
version = "0.1.0"
description = "Find unused files, dependencies, and public symbols in Python projects"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["python", "dead-code", "dependencies", "unused", "knip", "uv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/watany-dev/chokkin"
Repository = "https://github.com/watany-dev/chokkin"
Issues = "https://github.com/watany-dev/chokkin/issues"

[tool.maturin]
bindings = "bin"
strip = true
