[project]
name = "acme"
version = "0.1.0"

[tool.yokei]
entry = ["manage.py", "src/acme/asgi.py:application"]
project = ["src/**/*.py", "tests/**/*.py"]
mode = "library"
production = true
target_version = "py312"
respect_gitignore = false
confidence = "certain"
exclude = ["custom/**"]

[tool.yokei.dependencies]
dev_groups = ["dev"]
runtime_groups = ["server"]
type_groups = ["types"]

[tool.yokei.package_module_map]
"PyYAML" = ["yaml"]

[tool.yokei.binary_map]
pytest = "pytest"

[tool.yokei.plugins]
pytest = false
django = true
fastapi = true
celery = true

[tool.yokei.ignore]
YOK002 = ["boto3"]

[tool.yokei.workspaces.api]
path = "services/api"
entry = ["src/api/main.py"]
project = ["src/**/*.py"]
