[project]
name = "acme"
version = "0.1.0"

[tool.chokkin]
entry = ["manage.py", "src/acme/asgi.py:application"]
project = ["src/**/*.py", "tests/**/*.py"]
mode = "library"
production = true
target_version = "py312"
respect_gitignore = false
confidence = "certain"
exclude = ["custom/**"]

[tool.chokkin.dependencies]
dev_groups = ["dev"]
runtime_groups = ["server"]
type_groups = ["types"]

[tool.chokkin.package_module_map]
"PyYAML" = ["yaml"]

[tool.chokkin.binary_map]
pytest = "pytest"

[tool.chokkin.plugins]
pytest = false
django = true
fastapi = true
celery = true

[tool.chokkin.ignore]
CHK002 = ["boto3"]

[tool.chokkin.workspaces.api]
path = "services/api"
entry = ["src/api/main.py"]
project = ["src/**/*.py"]
